# fava-portfolio-returns

./: .editorconfig  .gitignore  .rgignore  CHANGELOG.md  CLAUDE.md  Dockerfile.test  Makefile  Pipfile  README.md  package.json  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile
.github/workflows/: continuous-integration.yaml  continuous-integration.yml
example/: Pipfile  beangrow.pbtxt  example.beancount
fava_portfolio_returns/: FavaPortfolioReturns.js  __init__.py
fava_portfolio_returns/templates/: FavaPortfolioReturns.html  PortfolioReturns.html  _overview.html  _report.html  style.css
frontend/: .eslintrc.js  .prettierrc.json  PortfolioReturns.html  charts.ts  eslint.config.mjs  i18next.config.ts  jest-puppeteer.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: app.tsx  cashflow_chart.ts  cumvalue_chart.ts  extension.ts  i18n.ts  pnl_chart.ts  router.ts  router.tsx  theme.tsx  utils.ts
frontend/src/api/: allocation.ts  api.ts  cash_flows.ts  compare.ts  config.ts  dividends.ts  groups.ts  investments.ts  metric_values.ts  missing_prices.ts  portfolio.ts  returns.ts  series.ts  summary.ts
frontend/src/components/: Dashboard.tsx  EChart.tsx  InvestmentsSelection.tsx  Loading.tsx  MetricSelection.tsx  ReturnsMethodSelection.tsx  format.ts  hooks.ts  query_params.ts  style.ts  useSearchParam.ts
frontend/src/components/Header/: ConfigProvider.tsx  DateRangeSelection.tsx  GlobalInvestmentsSelection.tsx  NavBar.tsx  TargetCurrencySelection.tsx  Toolbar.tsx  ToolbarProvider.tsx
frontend/src/locales/: i18next.d.ts  index.ts  translations.d.ts
frontend/src/locales/en/: translation.json
frontend/src/locales/tr/: translation.json
frontend/src/locales/zh/: translation.json
frontend/src/pages/: CashFlows.tsx  Dividends.tsx  Groups.tsx  Help.tsx  Investments.tsx  Layout.tsx  MissingPrices.tsx  Performance.tsx  Portfolio.tsx  Returns.tsx
frontend/src/routes/: __root.tsx  cash_flows.tsx  dividends.tsx  groups.tsx  help.tsx  index.tsx  investments.tsx  metrics.tsx  missing_prices.tsx  performance.tsx  portfolio.tsx  returns.tsx
frontend/tests/e2e/: pages.test.ts  reports.test.js  snapshots.test.ts
frontend/tests/e2e/__snapshots__/: pages.test.ts.snap  reports.test.js.snap
frontend/tests/e2e/pages.test.ts-snapshots/: HTML-Snapshot-Tests-Cash-Flows-1.aria.yml  HTML-Snapshot-Tests-Dividends-1.aria.yml  HTML-Snapshot-Tests-Groups-1.aria.yml  HTML-Snapshot-Tests-Investments-1.aria.yml  HTML-Snapshot-Tests-Performance-1.aria.yml  HTML-Snapshot-Tests-Performance-TWR-1.aria.yml  HTML-Snapshot-Tests-Portfolio-1.aria.yml  HTML-Snapshot-Tests-Returns-1.aria.yml  HTML-Snapshot-Tests-Returns-MDM-1.aria.yml  HTML-Snapshot-Tests-Returns-TWR-1.aria.yml
frontend/tests/e2e/snapshots.test.ts-snapshots/: HTML-Snapshot-Tests-Cash-Flows-1.aria.yml  HTML-Snapshot-Tests-Dividends-1.aria.yml  HTML-Snapshot-Tests-Groups-1.aria.yml  HTML-Snapshot-Tests-Help-1.aria.yml  HTML-Snapshot-Tests-Investments-1.aria.yml  HTML-Snapshot-Tests-Metrics-1.aria.yml  HTML-Snapshot-Tests-Missing-Prices-1.aria.yml  HTML-Snapshot-Tests-Performance-1.aria.yml  HTML-Snapshot-Tests-Performance-TWR-1.aria.yml  HTML-Snapshot-Tests-Portfolio-1.aria.yml  HTML-Snapshot-Tests-Returns-1.aria.yml  HTML-Snapshot-Tests-Returns-MDM-1.aria.yml  HTML-Snapshot-Tests-Returns-TWR-1.aria.yml
scripts/: update_changelog.py
src/fava_portfolio_returns/: FavaPortfolioReturns.js  __init__.py
src/fava_portfolio_returns/_vendor/: beangrow.pyi  vendor.txt
src/fava_portfolio_returns/_vendor/beangrow/: compute_returns.py  compute_returns_beam.py  config.py  configure.py  investments.py  reports.py  returns.py  returns_test.py
src/fava_portfolio_returns/api/: cash_flows.py  cash_flows_test.py  compare.py  compare_test.py  dividends.py  dividends_test.py  investments.py  investments_test.py  portfolio.py  portfolio_test.py  prices.py
src/fava_portfolio_returns/beangrow/: cash_flows.py  patch.py
src/fava_portfolio_returns/core/: currencies_test.py  intervals.py  intervals_test.py  portfolio.py  portfolio_test.py  pricer.py  pricer_test.py  utils.py  utils_test.py
src/fava_portfolio_returns/metrics/: base.py  factory.py  irr.py  irr_test.py  mdd.py  mdd_test.py  mdm.py  mdm_test.py  pnl.py  pnl_test.py  registry.py  returns.py  returns_test.py  twr.py  twr_test.py  volatility.py  volatility_test.py
src/fava_portfolio_returns/returns/: base.py  factory.py  irr.py  irr_test.py  mdm.py  mdm_test.py  monetary.py  monetary_test.py  pnl.py  pnl_test.py  returns.py  simple.py  simple_test.py  twr.py  twr_test.py
src/fava_portfolio_returns/templates/: FavaPortfolioReturns.html  _overview.html  _report.html  style.css
src/fava_portfolio_returns/test/: format_portfolio_values.py  test.py
src/fava_portfolio_returns/test/ledger/: annualized.beancount  beangrow.pbtxt  example_stock.beancount  linear_growth_stock.beancount  portfolio_vs_currency.beancount  savings_plan.beancount  savings_plan_daily.beancount  stock_split.beancount  target_currency.beancount  two_investments.pbtxt  unicode.beancount  unicode.pbtxt
tools/vendoring/patches/: beangrow_dependencies.patch  beangrow_irr_require_2_cashflows.patch  beangrow_mdm_zero_division.patch  beangrow_types.patch  beangrow_utf8.patch
