[project]
name = "fava-portfolio-returns"
dynamic = ["version"]
description = "fava-portfolio-returns shows portfolio returns in Fava"
authors = [
    { name = "Andreas Gerstmayr", email = "andreas@gerstmayr.me" }
]
dependencies = [
    "fava>=1.30",
    "beangrow>=1.0.0",
    "protobuf<3.21",
]
readme = "README.md"
requires-python = ">= 3.10"
license = {text = "GPL-2.0"}

[project.urls]
Source = "https://github.com/andreasgerstmayr/fava-portfolio-returns"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "types-python-dateutil>=2",
    "types-PyYAML>=6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fava_portfolio_returns"]

[tool.pylint.'messages control']
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-else-return",
    "line-too-long",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
