[project]
name = "fava-portfolio-returns"
dynamic = ["version"]
description = "fava-portfolio-returns shows portfolio returns in Fava"
readme = "README.md"
license = {text = "GPL-2.0"}
license-files = [
  "COPYING",
  "src/fava_portfolio_returns/_vendor/**/COPYING",
]
authors = [
    { name = "Andreas Gerstmayr", email = "andreas@gerstmayr.me" }
]
keywords = ["fava", "beancount", "portfolio", "investment", "returns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">= 3.10"
dependencies = [
    "fava>=1.30.3",
    "protobuf>=5.29.3",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
]

[project.urls]
Source = "https://github.com/andreasgerstmayr/fava-portfolio-returns"
Issues = "https://github.com/andreasgerstmayr/fava-portfolio-returns/issues"
Changelog = "https://github.com/andreasgerstmayr/fava-portfolio-returns/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "mypy>=1.9.0",
    "pip>=25.2",
    "pylint>=3.1.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "types-protobuf>=5.29.1.20241207",
    "types-python-dateutil>=2.9.0.20241206",
    "types-PyYAML>=6",
    "vendoring>=1.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/fava_portfolio_returns"]

[tool.pylint.'messages control']
disable = [
    "broad-exception-raised",
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-else-return",
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-return-statements",
]

[tool.mypy]
exclude = "src/fava_portfolio_returns/_vendor"

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 120
extend-exclude = ["src/fava_portfolio_returns/_vendor"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.vendoring]
destination = "src/fava_portfolio_returns/_vendor/"
requirements = "src/fava_portfolio_returns/_vendor/vendor.txt"
namespace = "fava_portfolio_returns._vendor"

protected-files = ["vendor.txt"]
patches-dir = "tools/vendoring/patches"

[tool.vendoring.transformations]
drop = [
  "bin/",
]
