[metadata]
name = fava-portfolio-returns
license = GPL-2.0
author = Andreas Gerstmayr
author_email = andreas@gerstmayr.me
url = https://github.com/andreasgerstmayr/fava-portfolio-returns

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    fava>=1.25.1
    beancount
    beangrow @ git+https://github.com/andreasgerstmayr/beangrow.git@2d82ed31b125de0e2e0143056e9d53e0121d33dc
    numpy
    protobuf<3.21
