[metadata]
name = fava-portfolio-returns
license = GPL-2.0
author = Andreas Gerstmayr
author_email = andreas@gerstmayr.me
url = https://github.com/andreasgerstmayr/fava-portfolio-returns

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    fava>=1.26
    beancount
    beangrow @ git+https://github.com/beancount/beangrow.git
    numpy
    protobuf<3.21

[options.packages.find]
where = src
